src/main/default/objects/WSUpdate__e/WSUpdate__e.object-meta.xml
<CustomObject>
    <description>Indicates updates (messages, errors or closing request) coming from WebSocket server</description>
    <label>WS Update</label>
    <pluralLabel>WS Updates</pluralLabel>
</CustomObject>