src/main/default/objects/WSUpdate__e/fields/Arguments__c.field-meta.xml
<CustomField>
    <fullName>Arguments__c</fullName>
    <description>JSON serialised parameters list passed to the handler</description>
    <label>Arguments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>