src/main/default/objects/WSUpdate__e/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <description>UUID WebSocket client identifier</description>
    <label>Client Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>