src/main/default/objects/WSUpdate__e/fields/Messages__c.field-meta.xml
<CustomField>
    <fullName>Messages__c</fullName>
    <description>JSON serialised messages list received from the WebSocket server</description>
    <label>Messages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>