src/main/default/objects/WSUpdate__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Message, Error or Close</description>
    <label>Type</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>